--- a/PieceManagerModTemplate.csproj
+++ b/PieceManagerModTemplate.csproj
@@ -109,7 +109,9 @@
         <Content Include=".gitignore" />
         <Content Include="assets\DropAssetBundleInThisFolder.txt" />
         <Content Include="ILRepack.targets" />
-        <Content Include="Libs\ServerSync.dll" />
+        <Content Include="Libs\ServerSync.dll">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="LICENSE.txt" />
         <Content Include="README.md" />
     </ItemGroup>
