--- a/PieceManagerModTemplate.csproj
+++ b/PieceManagerModTemplate.csproj
@@ -109,6 +109,9 @@
         <Content Include=".gitignore" />
         <Content Include="assets\DropAssetBundleInThisFolder.txt" />
         <Content Include="ILRepack.targets" />
+        <Content Include="Libs\PieceManager.dll">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="Libs\ServerSync.dll">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
